--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
   "dependencies": {
     "@types/peerjs": "0.0.29",
     "faye-websocket": "^0.11.0",
+    "hoek": "^5.0.3",
     "johnny-five": "^0.14.3",
     "marked": "^0.3.19",
     "peerjs": "^0.3.14",
-    "pxt-core": "^3.12.10"
+    "pxt-core": "^3.12.17"
   }
 }
